# qt_stockcheck

./: CMakeLists.txt  README.md  StockCheck3.qmlproject  images.qrc  qmlmodules
content/: App.qml  CMakeLists.txt  DeliveryView.qml  InventoryView.qml  LoginScreen.qml  OptionsBar.qml  Screen01.ui.qml  mainPage.qml
imports/: CMakeLists.txt
imports/StockCheck3/: CMakeLists.txt  qmldir
imports/StockCheck3/designer/: plugin.metainfo
src/: databasehandler.cpp  databasehandler.h  databasewrapper.cpp  databasewrapper.h  import_qml_plugins.h  main.cpp
